# hanzi2reading

./: .gitignore  Cargo.toml  LICENSE  README.md  hanzi2reading.proto
hanzi2reading/: create_db.py  read_test.py
js/: hanzi2reading.js  package.json
python/: setup.py
python/hanzi2reading/: __init__.py  create_cc_cedict.py  create_db.py  create_moedict.py  create_unihan.py  hanyu_pinyin_number.py  pinyin.py  pinyin_number.py  read.py  read_db.py  reading.py  serialize.py  syllable.py  trie.py  zhuyin.py
python/hanzi2reading/data/: cc-cedict.h2r  cedict.h2r  moedict.h2r  pinyin.txt  unihan-cedict.h2r  unihan.h2r
python/hanzi2reading/dictionary/: __init__.py  cedict.py  moedict.py  unihan.py  unihan_cedict.py
python/test/: read_test.py  serialize_test.py  syllable_test.py  test_hanyu_pinyin.py  test_pinyin.py  test_read.py  test_serialize.py  test_syllable.py
src/: h2rdb.rs  main.rs
