[package]
name = "hanzi2reading"
version = "0.0.1"
authors = ["Brandon Liu <bdon@bdon.org>"]
license = "BSD"
edition = "2018"
keywords = ["chinese"]
repository = "https://github.com/bdon/hanzi2reading"
description = "Fast hanzi readings with swappable dictionaries"
readme = "README"
categories = ["chinese"]

[dependencies]
quick-protobuf = "0.6.2"
